--- a/.github/workflows/OpenWrt_x86.yml
+++ b/.github/workflows/OpenWrt_x86.yml
@@ -202,6 +202,6 @@ jobs:
       run: |
         MSG="
         编译时间：${{ env.DATE }}
-        ${{ env.PRODUCT_NAME }} 编译完成
+        $x86 编译完成
         "
         curl "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" -d "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}&text=${MSG}"
